[tool.poetry]
name = "aml_project"
version = "0.1.0"
description = ""
authors = ["Andrey Palaev <a.palaev@innopolis.university>",
           "Mikhail Rudakov <m.rudakov@innopolis.university>",
           "Dinislam Gabitov <d.gabitov@innopolis.university>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl"}
gym = "^0.26.2"
pygame = "^2.5.2"
matplotlib = "^3.8.4"
black = "^24.4.0"
hydra-core = "^1.3.2"
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"